<resources>
    <string name="app_name">Weather Report</string>
    <string name="action_settings">Settings</string>
    
    <string name="temprature_label">Temperature</string>
    <string name="city_label">City</string>
    <string name="update_time_label">Updated Time</string>
    <string name="weather_label">Weather</string>
    <string name="wind_label">Wind</string>
    <string name="select_city_label">Select City</string>



    <string-array name="city_list">
        <item>Select City</item>
        <item>MELBOURNE,AU</item>
        <item>SYDNEY,AU</item>
        <item>WOLLONGONG,AU</item>
    </string-array>
</resources>
