<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".WeatherReportActivity"
    tools:showIn="@layout/activity_main">



    <Spinner
        android:id="@+id/citySpinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
       >


    </Spinner>


    <TableLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:stretchColumns="*"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal|center|center_vertical"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:background="@drawable/divider_drawable"
           >

            <TextView
                android:text="@string/city_label"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"
                 />
            <View
                android:layout_weight=".01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/cityValueTv"
                android:text=""
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="50dp"
                android:textColor="@android:color/black"

                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_drawable_white"
            android:divider="@android:color/black"
            android:weightSum="2"
            >

            <TextView
                android:text="@string/update_time_label"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="50dp"
                android:textColor="@android:color/black"

                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>
            <View
                android:layout_weight=".01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/updateTimeValueTv"
                android:text=""
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="50dp"
                android:textColor="@android:color/black"

                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_drawable"
            android:divider="@android:color/black"
            android:weightSum="2"
            >

            <TextView
                android:text="@string/weather_label"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="50dp"
                android:textColor="@android:color/black" android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>
            <View
                android:layout_weight=".01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/wheatherValueTv"
                android:text=""
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="50dp"
                android:textColor="@android:color/black"

                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_drawable_white"
            android:divider="@android:color/black"
            android:weightSum="2"
            >

            <TextView
                android:text="@string/temprature_label"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>

            <View
                android:layout_weight=".01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/tempratureValueTv"
                android:text=""
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="50dp"
                android:textColor="@android:color/black"

                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/divider_drawable"
            android:divider="@android:color/black"
            android:weightSum="2"
            >

            <TextView
                android:text="@string/wind_label"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="50dp"
                android:textColor="@android:color/black"
                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>
            <View
                android:layout_weight=".01"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:id="@+id/windValueTv"
                android:text=""
                android:layout_width="0dp"
                android:layout_weight="1.1"
                android:layout_height="50dp"
                android:textColor="@android:color/black"

                android:paddingLeft="10dp"
                android:gravity="center_vertical|left|center_horizontal"/>

        </TableRow>
    </TableLayout>

</android.support.design.widget.CoordinatorLayout>